Added test cases
Added test cases for SPID rules.
Added a new criteria for ordering providers.